[package]

name = "errno"
version = "0.3.2"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]

license = "MIT OR Apache-2.0"
edition = "2018"
documentation = "https://docs.rs/errno"
repository = "https://github.com/lambda-fairy/rust-errno"
description = "Cross-platform interface to the `errno` variable."
categories = ["no-std", "os"]
rust-version = "1.48"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
]

[target.'cfg(target_os="dragonfly")'.dependencies]
errno-dragonfly = "0.1.1"

[target.'cfg(target_os="wasi")'.dependencies]
libc = "0.2"

[target.'cfg(target_os="hermit")'.dependencies]
libc = "0.2"

[features]
default = ["std"]
std = []
